fixed desktop menu alignment

--- a/assets/scss/component/_nav.scss
+++ b/assets/scss/component/_nav.scss
@@ -388,6 +388,7 @@
                     padding: 18px 0 18px 25px;
                     border-bottom: 1px solid #ececec;
                     margin: 0 9px;
+                    text-align: left;
                 }
 
                 & .add-arrow:after {
